--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node-base64-image": "^1.0.3",
     "node-oxford-emotion": "^1.0.4",
     "rapidapi-connect": "0.0.2",
-    "request": "^2.79.0"
+    "request": "^2.79.0",
+    "socket.io": "^1.5.1"
   }
 }
